[cleanup] Remove the obsolete MaxPermSize argument
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>