@@ -24,7 +24,7 @@
 					<testClass>org.eclipse.gmf.tests.runtime.notation.AllTests</testClass>
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>true</useUIThread>
-					<argLine>-ea -XX:MaxPermSize=128m -Xmx1024m</argLine>
+					<argLine>-ea -Xmx1024m</argLine>
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
